<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <Button
        android:id="@+id/datenly_commerzDigit_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/letterx"
        android:textColor="#000" />
    <LinearLayout
        android:id="@+id/datenly_commerzDigit_diplay_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/ic_antenna"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="#2B2D55"
            android:textSize="15dp"
            android:text="@string/datenly_commerzDigit_permission_title1"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/datenly_commerzDigit_diplay_two"
        android:layout_below="@id/datenly_commerzDigit_close"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_corners"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/datenly_commerzDigit_text_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/datenly_commerzDigit_permission_title2"
                android:textColor="#2B2D55"
                android:textSize="16dp" />

        </LinearLayout>



        <ScrollView
            android:layout_marginBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_1" />
                    <TextView
                        android:id="@+id/datenly_commerzDigit_permission_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_1"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/datenly_commerzDigit_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_2" />
                    <TextView
                        android:id="@+id/datenly_commerzDigit_permission_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_2"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_copy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_3" />
                    <TextView
                        android:id="@+id/permission_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_3"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_four" />
                    <TextView
                        android:id="@+id/permission_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_3"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_5" />
                    <TextView
                        android:id="@+id/permission_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_5"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_number_6" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/datenly_commerzDigit_permission_infos_6"
                        android:textColor="#2B2D55"
                        android:textSize="15dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/datenly_commerzDigit_permission_infos_7"
                    android:textStyle="bold"
                    android:textColor="#2B2D55"
                    android:textSize="15dp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/datenly_commerzDigit_diplay_three"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_alarm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/datenly_commerzDigit_notif_title"
            android:textColor="#2B2D55"
            android:textSize="17dp" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/require_wifi_api29"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/wifisuggestion_explain" />
            <TextView
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/datenly_commerzDigit_notif_send"
                android:textColor="#2B2D55" />
        </LinearLayout>

        <ImageView
            android:id="@+id/require_wifi_api30"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/wifisuggestion_esplain_internal"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/datenly_commerzDigit_btn1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#C1E6CB"
        android:clickable="true"
        android:letterSpacing="0.1"
        android:text="@string/datenly_commerzDigit_btn1"
        android:textColor="#2B2D55"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:visibility="gone"
        android:id="@+id/datenly_commerzDigit_btn2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#C1E6CB"
        android:textColor="#2B2D55"
        android:textSize="20dp"
        android:letterSpacing="0.1"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/datenly_commerzDigit_btn1"/>
    <Button
        android:visibility="gone"
        android:id="@+id/datenly_commerzDigit_btn3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#C1E6CB"
        android:textColor="#2B2D55"
        android:textSize="20dp"
        android:letterSpacing="0.1"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/datenly_commerzDigit_btn1"/>

</RelativeLayout>